# best-msc

./: .gitignore  README.md  pom.xml
best-msc-binbin/: pom.xml
best-msc-binbin/src/main/resources/: application.yml  banner.txt  logback-spring.xml
best-msc-cobweb/: pom.xml
best-msc-cobweb/src/main/resources/: application.yml  banner.txt  logback-spring.xml
best-msc-common/: pom.xml
best-msc-common/best-msc-core/: pom.xml
best-msc-common/best-msc-generator/: pom.xml
best-msc-common/best-msc-log/: pom.xml
best-msc-common/best-msc-security/: pom.xml
best-msc-common/best-msc-swagger/: pom.xml
best-msc-python/: README.md  pyproject.toml
best-msc-python/src/app/: main.py
best-msc-ui/cobweb-ui/: README.md  index.html  package.json
best-msc-ui/cobweb-ui-v2/: .env.base  .env.dev  .env.pro  .env.test  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
best-msc-ui/cobweb-ui-v2/src/: App.vue  main.ts  permission.ts
best-msc-ui/cobweb-ui-v2/src/layout/: Layout.vue
best-msc-ui/cobweb-ui-v2/src/locales/: en.ts  zh-CN.ts
best-msc-ui/cobweb-ui-v2/src/router/: index.ts
best-msc-ui/cobweb-ui-v2/src/store/: index.ts
best-msc-ui/cobweb-ui-v2/src/styles/: variables.module.less
best-msc-ui/cobweb-ui-v2/src/utils/: propTypes.ts  routerHelper.ts  tsxHelper.ts
best-msc-ui/cobweb-ui-v2/src/views/: HomeView.vue
best-msc-ui/cobweb-ui-v2/types/: env.d.ts  global.d.ts  router.d.ts
best-msc-ui/cobweb-ui/config/: api.config.js  index.js
best-msc-ui/cobweb-ui/src/: App.vue  main.js
(+323 files in other folders)
