[tool.poetry]
name = "com-jing-msc-py"
version = "0.0.1"
description = "This is python service"
authors = ["lijing <flm894634186@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
